# trickrig

./: .gitignore  .gitmodules  .hgignore  .tags.cmd  .vim  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.8734f42  CMakeLists.txt.user.9b2ab9e  CMakeLists.txt.user.b47c162  CMakeLists.txt_gcc  LICENSE  README  README.md  TODO.txt  bake.cmd  clang.bake.cmd  clang_CMakeLists.txt  info.txt  notes.txt  plan.txt  tags  todolist.txt
.extlibs/: glcore33.tgz
.extlibs/glcore33/: CMakeLists.txt
.extlibs/sqlite3/: sample.cpp  sqlite3-1.c  sqlite3-3.c  sqlite3-4.c  sqlite3-5.c  sqlite3-7.c  test.db
.github/workflows/: cmake.yml
.hg/: hgrc  last-message.txt  thgstatus  undo.backup.dirstate  undo.desc  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  undo.backup.fncache  undo.backup.phaseroots
.hg/store/data/: _c_make_lists.txt.i  _r_e_a_d_m_e.i  bake.cmd.i  cb__backup.conf.i  clang.bake.cmd.i  clang___c_make_lists.txt.i  info.txt.i  plan.txt.i  tr0.cbp.i  tr0.depend.i  tr0.layout.i  ~2ehgignore.i  ~2etags.cmd.i  ~2evim.i
.hg/store/data/assets/: _deja_vu_sans_mono.ttf.i  cube.fra.i  cube.ver.i  frag.glsl.i  geom.glsl.i  hud.png.i  hud.xcf.i  scr__frag.glsl.i  scr__vert.glsl.i  tex0__512.png.d  tex0__512.png.i  vert.glsl.i
.hg/store/data/dlls/: libgcc__s__seh-1.dll.i  libpng16.dll.d  libpng16.dll.i  libstdc++-6.dll.d  libstdc++-6.dll.i  libwinpthread-1.dll.i
.hg/store/data/include/: config.hpp.i  cube.hpp.i  gen3d.hpp.i  glfw.hpp.i  glsl.hpp.i  io.hpp.i  main.hpp.i  rigs.hpp.i  space.hpp.i  t256x256.hpp.d  t256x256.hpp.i  ttf.hpp.i  vbo.hpp.i  win__glfw.hpp.i  ~2evim.i
.hg/store/data/lib/: gl__core33.c.i  gl__core33.h.i  ~2evim.i
.hg/store/data/src/: config.cpp.i  (+13 more)
3rdlibs/glad/: CMakeLists.txt  glad.c  glad.h
3rdlibs/sqlite3/: CMakeLists.txt  sqlite3-2.c  sqlite3-6.c  sqlite3-all.c
_dbg_/: CMakeCache.txt  Makefile  cmake_install.cmake
assets/: MS-Code.txt  frag.glsl  hud.xcf  new_rig.txt  scr_frag.glsl  scr_vert.glsl  sel_frag.glsl  sel_vert.glsl  space.db  surf16x16.mtl  surf_tpl.db  test_flat.blend  test_flat.blend1  test_flat.mtl  tex0_512.xcf  untitled.blend  vert.glsl  vox.txt
assets/Cousine/: letters.docx
assets/database/: config.db  space.db
assets/database/1576336508/: config.db  map.db
assets/font/: map.hpp
assets/fonts/: map.hpp
assets/fonts/Cousine/: letters.odt
assets/mix/: OpenGL.txt  TrickRig.dia  conf.tgz  hud.xcf  surf16x16.blend  surf16x16.blend1  tex0_512.xcf  text-textures.txt  tools.cpp
assets/mix/archiv/: bake.cmd  math_search_cross.cpp
assets/mix/docs/: TODO.txt  lod_progress.txt  notes.txt
assets/mix/func_tests/: 3d_to_cam3d.txt  ar  arr_tst.cpp  clog.cpp  corners.cpp  dirlist.cpp  dot_cross.cpp  dot_in_obj.cpp  int2char.cpp  matView.cpp  max.cpp  sp  ts  tst_arr_init.cpp  u8string.cpp  vectors_test.cpp
assets/mix/multibuf_render/: CMakeLists.txt  gl_tools.cpp  gl_tools.hpp  glad.c  glad.h  glfw_win.cpp  main.cpp  main.cpp_DOC  main.hpp  vert.glsl
assets/mix/multibuf_render/docs/: info.txt
assets/mix/multibuf_render/docs/Ручная загрузка/: info.txt
assets/mix/sample/: simple  simple.cpp
assets/mix/simple/: Makefile  simple.cpp  test
assets/mix/triangle_cross/: space.cpp
assets/shaders/: 2d_frag.glsl  2d_vert.glsl  3d_frag.glsl  menu_frag.glsl  menu_vert.glsl  win_frag.glsl
assets/textures/: font0.hpp
assets/tmp.database/: config.db
assets/tmp.database/1576336508/: config.db  map — копия.db  map.db  map0.db  map1.db
cmakes/: glad.cmake  main.cmake  params.cmake  server.cmake  version_hpp.cmake
cmakes/extlibs/: freetype2.cmake  glad.cmake  glcore33.cmake  glfw.cmake  glm.cmake  libpng.cmake  sqlite3.cmake  zlib.cmake
dev.mix/: libs_list.txt
dev.mix/archiv/: bake.cmd  math_search_cross.cpp
dev.mix/archiv/voxesdb/: voxesdb.cpp
dev.mix/docs/: tracing.info
dev.mix/fonts/: tex_font.h
dev.mix/func_tests/: 3d_to_cam3d.cpp  clog.cpp  corners.cpp  getenv.cpp  glm_vec.cpp  int2char.cpp  splice.cpp  vectors_test.cpp  wstr2strMD5.cpp
docs/: make  news.txt  notes.txt  wiki.md
docs/CherryTree/: TrickRigProject.ctd
glad/: CMakeLists.txt
include/: .vim  area.hpp  box.hpp  config.hpp  cube.hpp  db.hpp  dbw.hpp  dbwrap.hpp  framebuf.hpp  gen3d.hpp  glfw.hpp  glsl.hpp  gui.hpp  i_win.hpp  io.hpp  loader_obj.hpp  main.hpp  objl.hpp  objloader.hpp  rdb.hpp  rig.hpp  rigs.hpp  scene.hpp  snip.hpp  space.hpp  sqlitew.hpp  sqlw.hpp  tags  ttf.hpp  vbo.hpp  vox.hpp  voxbuf.hpp  voxdb.hpp  voxel.hpp  voxesdb.hpp  wglfw.hpp  wingl.hpp  winpar.hpp  wsql.hpp  wsqlite.hpp
libs/nuklear/: nuklear_glfw_gl3.h
server/: CMakeLists.txt  Info.txt  README.md  TODO.txt  bake.cmd  ctrl.cpp  enetw.cpp  enetw.hpp  server.cpp  server.hpp  tst  tst01.cpp  tst1  tst1.cpp
server/enet/: CMakeLists.txt  ctrl.cpp  server.cpp
src/: .vim  area.cpp  box.cpp  config.cpp  cube.cpp  db.cpp  dbw.cpp  dbwrap.cpp  framebuf.cpp  gen3d.cpp  glfw.cpp  glsl.cpp  gui.cpp  io.cpp  loader_obj.cpp  main.cpp  objl.cpp  objloader.cpp  rdb.cpp  rig.cpp  rigs.cpp  scene.cpp  snip.cpp  space.cpp  sqlitew.cpp  sqlw.cpp  tags  to-do.txt  tools.cpp_  trgl.cpp  ttf.cpp  vbo.cpp  vox.cpp  voxbuf.cpp  voxdb.cpp  voxel.cpp  voxesdb.cpp  wglfw.cpp  wingl.cpp  winpar.cpp  (+2 more)
src/main/: app.cpp  area.cpp  config.cpp  config.hpp  db.cpp  db.hpp  face_gen.cpp  facegen.hpp  framebuf.cpp  framebuf.hpp  glsl.cpp  glsl.hpp  gui.cpp  image.cpp  io.hpp  main.cpp  main.hpp  space.cpp  space.hpp  tools.cpp  trgl.cpp  trgl.hpp  vbo.cpp  vbo.hpp  vox.cpp  vox.hpp  wsql.cpp  wsql.hpp
src/main/include/: app.hpp  area.hpp  config.hpp  db.hpp  framebuf.hpp  glsl.hpp  gui.hpp  i_win.hpp  image.hpp  main.hpp  space.hpp  tools.hpp  trgl.hpp  vbo.hpp  vox.hpp
src/server/: Info.txt  server.cpp
src/tools/: CMakeLists.txt  faces_gen.cpp
tmp/: a.out  app  loader_obj.cpp  loader_obj.hpp  objloader.cpp  objloader.hpp  sqlw.cpp  sqlw.hpp  test.db  tst.cpp
tp_libs/: _SRC_URLS.txt
tp_libs/freetype/: _version
(+2 files in other folders)
